--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <a class="list-group-item list-group-item-action" href="#list-item-3">Question 3</a>
             <a class="list-group-item list-group-item-action" href="#list-item-4">Question 4</a>
             <a class="list-group-item list-group-item-action" href="#list-item-5">Question 5</a>
+              <a class="list-group-item list-group-item-action" href="#list-item-5">Question 5</a>
           </div>
         </div>
         <div class="col-8">
