--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <a class="list-group-item list-group-item-action" href="#list-item-4">Question 4</a>
             <a class="list-group-item list-group-item-action" href="#list-item-5">Question 5</a>
               <a class="list-group-item list-group-item-action" href="#list-item-5">Question 5</a>
+              <a class="list-group-item list-group-item-action" href="#list-item-7">Question 7</a>
           </div>
         </div>
         <div class="col-8">
