--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a class="list-group-item list-group-item-action" href="#list-item-3">Question 3</a>
             <a class="list-group-item list-group-item-action" href="#list-item-4">Question 4</a>
             <a class="list-group-item list-group-item-action" href="#list-item-5">Question 5</a>
-              <a class="list-group-item list-group-item-action" href="#list-item-5">Question 5</a>
+              <a class="list-group-item list-group-item-action" href="#list-item-6">Question 6</a>
           </div>
         </div>
         <div class="col-8">
@@ -146,7 +146,7 @@
                 </section>
             </div>
             <br>
-            <h4 id="list-item-5">Question5: ow do bacteria help in nitrogen fixation?</h4>
+            <h4 id="list-item-5">Question5: How do bacteria help in nitrogen fixation?</h4>
             <hr>
             <div>
                 
@@ -160,6 +160,23 @@
                         <li><img src="Nitrogen.png" alt="Image description"></li>
                         <li>Nitrogen gas process </li>
                     </ul>
+                </section>
+            </div>
+
+              --------------------
+
+              <br>
+
+              <h4 id="list-item-6">Question6: What are microbes?</h4>
+            <hr>
+            <div>
+                
+                <section class="answer">
+                    <h2>Answer:</h2>
+                    <p>Microbes are minute, unicellular organisms that are invisible to the naked eye. 
+                        They are also known as microorganisms or microscopic organisms as they could only be seen 
+                        under a microscope. They make up almost 60% of the earth’s living matter.</p>
+
                 </section>
             </div>
 
